fixed spacing on nav

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ img {
   padding-top: 0.66rem;
   padding-bottom: 0.66rem;
   display: flex;
-  align-items: left;
+  align-items: center;
 }
 
 .header-content img {
@@ -39,6 +39,7 @@ img {
 .header-content span {
   font-family: Helvetica;
   font-size: 1rem;
+  padding: 0.5rem 0;
 }
 
 /* top section */
@@ -79,13 +80,18 @@ nav {
   color: white;
 }
 
+ul {
+  display: flex;
+  justify-content: space-between;
+}
+
 nav ul li {
   display: inline-flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0.75rem 2.5rem;
   font-family: Helvetica, sans-serif;
   font-size: 18px;
+  padding: 0.75rem 0;
+  justify-content: space-between;
 }
 
 /* items, times, and location */
@@ -95,7 +101,7 @@ nav ul li {
       }
 }
 
-.pb-container {
+.pb.container {
   background-color: white;
   padding-bottom: 4rem;
   display: flex;
@@ -106,7 +112,8 @@ nav ul li {
 .products {
   display: flex;
   justify-content: space-between;
-  margin: 3rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .product {
@@ -147,7 +154,6 @@ nav ul li {
   padding: 1rem 0;
   font-family: Helvetica, sans-serif;
   color: white;
-  margin-left: 3rem;
 }
 
 #hours {
@@ -157,15 +163,6 @@ nav ul li {
   padding: 1rem 0;
   font-family: Helvetica, sans-serif;
   color: white;
-  margin-right: 3rem;
-}
-
-.info-l {
-  margin-left: 3rem;
-}
-
-.info-t {
-  margin-right: 3rem;
 }
 
 .business-info {
